force-app/main/default/objects/Finance_Information__c/Finance_Information__c.object-meta.xml
<CustomObject>
    <label>Cenveo Finance Information</label>
    <nameField>
        <displayFormat>FA {YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cenveo Finance Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>