force-app/main/default/objects/Finance_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cenveo Finance Information</relationshipLabel>
    <relationshipName>Finance_Information</relationshipName>
    <type>Lookup</type>
</CustomField>