force-app/main/default/objects/Finance_Information__c/fields/Alterations__c.field-meta.xml
<CustomField>
    <fullName>Alterations__c</fullName>
    <label>Alterations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>