force-app/main/default/objects/Finance_Information__c/fields/Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount__c</fullName>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>