force-app/main/default/objects/Finance_Information__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <type>TextArea</type>
</CustomField>