force-app/main/default/objects/Finance_Information__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <type>TextArea</type>
</CustomField>