force-app/main/default/objects/Finance_Information__c/fields/Days_Since_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Shipped__c</fullName>
    <label>Days Since Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>