force-app/main/default/objects/Finance_Information__c/fields/Est_Ship_Sales__c.field-meta.xml
<CustomField>
    <fullName>Est_Ship_Sales__c</fullName>
    <label>Est Ship Sales $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>