force-app/main/default/objects/Finance_Information__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>