force-app/main/default/objects/Finance_Information__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <label>Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>