force-app/main/default/objects/Finance_Information__c/fields/Last_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Ship_Date__c</fullName>
    <label>Last Shipped Date</label>
    <type>Date</type>
</CustomField>