force-app/main/default/objects/Finance_Information__c/fields/Less_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Less_Invoiced__c</fullName>
    <label>Less Invoiced $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>