force-app/main/default/objects/Finance_Information__c/fields/Loaded_Manager__c.field-meta.xml
<CustomField>
    <fullName>Loaded_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaded Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cenveo_Finance_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>