force-app/main/default/objects/Finance_Information__c/fields/Old_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Id__c</fullName>
    <label>Old Account Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>