force-app/main/default/objects/Finance_Information__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL - Acclaim</fullName>
            </value>
            <value>
                <fullName>CL - Express Label</fullName>
            </value>
            <value>
                <fullName>CL - Lightning</fullName>
            </value>
            <value>
                <fullName>CL - Maverick</fullName>
            </value>
            <value>
                <fullName>CL - New Albany</fullName>
            </value>
            <value>
                <fullName>CL - Omaha</fullName>
            </value>
            <value>
                <fullName>CP - Lancaster</fullName>
            </value>
            <value>
                <fullName>CP - Toledo</fullName>
            </value>
            <value>
                <fullName>Envelope plants - Finance Only</fullName>
            </value>
            <value>
                <fullName>JDE - Master</fullName>
            </value>
            <value>
                <fullName>L&amp;P - Gilbreth</fullName>
            </value>
            <value>
                <fullName>L&amp;P - International</fullName>
            </value>
            <value>
                <fullName>MMT</fullName>
            </value>
            <value>
                <fullName>Nashua</fullName>
            </value>
            <value>
                <fullName>NEC - Finance Only</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>CP - Amarillo</fullName>
            </value>
            <value>
                <fullName>CP - Clixx</fullName>
            </value>
            <value>
                <fullName>CP - Conklin</fullName>
            </value>
            <value>
                <fullName>CP - Content</fullName>
            </value>
            <value>
                <fullName>CP - Easton</fullName>
            </value>
            <value>
                <fullName>CP - Garland</fullName>
            </value>
            <value>
                <fullName>CP - Hurlock</fullName>
            </value>
            <value>
                <fullName>CP - Los Angeles</fullName>
            </value>
            <value>
                <fullName>CP - Minneapolis East</fullName>
            </value>
            <value>
                <fullName>CP - Port City</fullName>
            </value>
            <value>
                <fullName>CP - Portland</fullName>
            </value>
            <value>
                <fullName>CP - Richmond</fullName>
            </value>
            <value>
                <fullName>CP - San Antonio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>