force-app/main/default/objects/Finance_Information__c/fields/Quoted_Amt__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Amt__c</fullName>
    <label>Quoted Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>