force-app/main/default/objects/Finance_Information__c/fields/Sales_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accrual__c</fullName>
    <label>Sales Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>