force-app/main/default/objects/Finance_Information__c/fields/Sales_Kit_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sales_Kit_Actual_Cost__c</fullName>
    <label>Sales Kit Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>