force-app/main/default/objects/Finance_Information__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cenveo_Finance_Information</relationshipName>
    <type>Lookup</type>
</CustomField>