force-app/main/default/objects/Finance_Information__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <label>% Shipped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>