force-app/main/default/objects/Finance_Information__c/fields/Shipped_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Amount__c</fullName>
    <label>Shipped Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>