force-app/main/default/objects/Finance_Information__c/fields/Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Quantity__c</fullName>
    <label>Shipped Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>