force-app/main/default/objects/Finance_Information__c/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <formula>Sales_Person__r.Manager.FirstName &amp;&quot; &quot;&amp; Sales_Person__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Manager</label>
    <type>Text</type>
</CustomField>