force-app/main/default/objects/Finance_Information__c/recordTypes/Cenveo_Finance_Information.recordType-meta.xml
<RecordType>
    <fullName>Cenveo_Finance_Information</fullName>
    <active>true</active>
    <description>Billing account numbers</description>
    <label>Cenveo Finance Information</label>
</RecordType>