force-app/main/default/objects/Finance_Information__c/recordTypes/JSNB.recordType-meta.xml
<RecordType>
    <fullName>JSNB</fullName>
    <active>true</active>
    <label>JSNB</label>
</RecordType>